add click event
